--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@mdi/js": "^6.5.95",
+    "axios": "^0.25.0",
     "sirv-cli": "^2.0.0",
     "svelte-materialify": "^0.3.11",
     "uuid": "^8.3.2"
